test/sema/negative/super_traits1.impala
trait T {
    fn f(self: Self) -> Self;
}
trait U : T {}

impl U for int32 {
}
