test/sema/negative/super_traits1.out
super_traits1.impala:6 col 1 - 7 col 1: error: Must implement method 'f'
